Add Actor class

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -81,6 +81,9 @@
     <Compile Include="Assets\Scripts\MovingObject.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\SoundManager.cs" />
+    <Compile Include="Assets\Scripts\Stats\ActorCharacteristics.cs" />
+    <Compile Include="Assets\Scripts\Stats\ICharcteristicsMod.cs" />
+    <Compile Include="Assets\Scripts\Stats\IChracteristics.cs" />
     <Compile Include="Assets\Scripts\Trap.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/danie/LegendOfDarkestDungeon/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
